--- a/QxCentre/Makefile
+++ b/QxCentre/Makefile
@@ -14,10 +14,10 @@ EQ            = =
 
 CC            = gcc
 CXX           = g++
-DEFINES       = -DQT_WIDGETS_LIB -DQT_MULTIMEDIA_LIB -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB
+DEFINES       = -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_CORE_LIB
 CFLAGS        = -pipe -g -Wall -Wextra -D_REENTRANT -fPIC $(DEFINES)
-CXXFLAGS      = -pipe -g -Wall -Wextra -D_REENTRANT -fPIC $(DEFINES)
-INCPATH       = -I. -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtMultimedia -I/usr/include/x86_64-linux-gnu/qt5/QtGui -I/usr/include/x86_64-linux-gnu/qt5/QtNetwork -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I. -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++
+CXXFLAGS      = -pipe -g -std=gnu++11 -Wall -Wextra -D_REENTRANT -fPIC $(DEFINES)
+INCPATH       = -I. -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtGui -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I. -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++
 QMAKE         = /usr/lib/qt5/bin/qmake
 DEL_FILE      = rm -f
 CHK_DIR_EXISTS= test -d
@@ -40,7 +40,7 @@ DISTNAME      = QxCentre1.0.0
 DISTDIR = /home/ares/QxCentre/QxCentre/.tmp/QxCentre1.0.0
 LINK          = g++
 LFLAGS        = 
-LIBS          = $(SUBLIBS) /usr/lib/x86_64-linux-gnu/libQt5Widgets.so /usr/lib/x86_64-linux-gnu/libQt5Multimedia.so /usr/lib/x86_64-linux-gnu/libQt5Gui.so /usr/lib/x86_64-linux-gnu/libQt5Network.so /usr/lib/x86_64-linux-gnu/libQt5Core.so -lGL -lpthread   
+LIBS          = $(SUBLIBS) /usr/lib/x86_64-linux-gnu/libQt5Widgets.so /usr/lib/x86_64-linux-gnu/libQt5Gui.so /usr/lib/x86_64-linux-gnu/libQt5Core.so -lGL -lpthread   
 AR            = ar cqs
 RANLIB        = 
 SED           = sed
@@ -56,27 +56,19 @@ SOURCES       = main.cpp \
 		mainwindowbrick.cpp \
 		themebrick.cpp \
 		interlinkbrick.cpp \
-		../QxAudio/QxAudioPlayer/qxmusicplayerwindow.cpp \
-		../QxDocument/QxWrite/qxwritewindowbrick.cpp \
-		../QxDocument/QxSheet/qxsheetwindowbrick.cpp moc_mainwindowbrick.cpp \
+		windowbrick.cpp moc_mainwindowbrick.cpp \
 		moc_themebrick.cpp \
 		moc_interlinkbrick.cpp \
-		moc_qxmusicplayerwindow.cpp \
-		moc_qxwritewindowbrick.cpp \
-		moc_qxsheetwindowbrick.cpp
+		moc_windowbrick.cpp
 OBJECTS       = main.o \
 		mainwindowbrick.o \
 		themebrick.o \
 		interlinkbrick.o \
-		qxmusicplayerwindow.o \
-		qxwritewindowbrick.o \
-		qxsheetwindowbrick.o \
+		windowbrick.o \
 		moc_mainwindowbrick.o \
 		moc_themebrick.o \
 		moc_interlinkbrick.o \
-		moc_qxmusicplayerwindow.o \
-		moc_qxwritewindowbrick.o \
-		moc_qxsheetwindowbrick.o
+		moc_windowbrick.o
 DIST          = /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/common/unix.conf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/common/linux.conf \
@@ -160,15 +152,11 @@ DIST          = /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
 		qxcentre.pro mainwindowbrick.h \
 		themebrick.h \
 		interlinkbrick.h \
-		../QxAudio/QxAudioPlayer/qxmusicplayerwindow.h \
-		../QxDocument/QxWrite/qxwritewindowbrick.h \
-		../QxDocument/QxSheet/qxsheetwindowbrick.h main.cpp \
+		windowbrick.h main.cpp \
 		mainwindowbrick.cpp \
 		themebrick.cpp \
 		interlinkbrick.cpp \
-		../QxAudio/QxAudioPlayer/qxmusicplayerwindow.cpp \
-		../QxDocument/QxWrite/qxwritewindowbrick.cpp \
-		../QxDocument/QxSheet/qxsheetwindowbrick.cpp
+		windowbrick.cpp
 QMAKE_TARGET  = QxCentre
 DESTDIR       = 
 TARGET        = QxCentre
@@ -358,8 +346,8 @@ distdir: FORCE
 	@test -d $(DISTDIR) || mkdir -p $(DISTDIR)
 	$(COPY_FILE) --parents $(DIST) $(DISTDIR)/
 	$(COPY_FILE) --parents /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/data/dummy.cpp $(DISTDIR)/
-	$(COPY_FILE) --parents mainwindowbrick.h themebrick.h interlinkbrick.h ../QxAudio/QxAudioPlayer/qxmusicplayerwindow.h ../QxDocument/QxWrite/qxwritewindowbrick.h ../QxDocument/QxSheet/qxsheetwindowbrick.h $(DISTDIR)/
-	$(COPY_FILE) --parents main.cpp mainwindowbrick.cpp themebrick.cpp interlinkbrick.cpp ../QxAudio/QxAudioPlayer/qxmusicplayerwindow.cpp ../QxDocument/QxWrite/qxwritewindowbrick.cpp ../QxDocument/QxSheet/qxsheetwindowbrick.cpp $(DISTDIR)/
+	$(COPY_FILE) --parents mainwindowbrick.h themebrick.h interlinkbrick.h windowbrick.h $(DISTDIR)/
+	$(COPY_FILE) --parents main.cpp mainwindowbrick.cpp themebrick.cpp interlinkbrick.cpp windowbrick.cpp $(DISTDIR)/
 
 
 clean: compiler_clean 
@@ -388,48 +376,34 @@ compiler_moc_predefs_make_all: moc_predefs.h
 compiler_moc_predefs_clean:
 	-$(DEL_FILE) moc_predefs.h
 moc_predefs.h: /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/data/dummy.cpp
-	g++ -pipe -g -Wall -Wextra -dM -E -o moc_predefs.h /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/data/dummy.cpp
+	g++ -pipe -g -std=gnu++11 -Wall -Wextra -dM -E -o moc_predefs.h /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/data/dummy.cpp
 
-compiler_moc_header_make_all: moc_mainwindowbrick.cpp moc_themebrick.cpp moc_interlinkbrick.cpp moc_qxmusicplayerwindow.cpp moc_qxwritewindowbrick.cpp moc_qxsheetwindowbrick.cpp
+compiler_moc_header_make_all: moc_mainwindowbrick.cpp moc_themebrick.cpp moc_interlinkbrick.cpp moc_windowbrick.cpp
 compiler_moc_header_clean:
-	-$(DEL_FILE) moc_mainwindowbrick.cpp moc_themebrick.cpp moc_interlinkbrick.cpp moc_qxmusicplayerwindow.cpp moc_qxwritewindowbrick.cpp moc_qxsheetwindowbrick.cpp
+	-$(DEL_FILE) moc_mainwindowbrick.cpp moc_themebrick.cpp moc_interlinkbrick.cpp moc_windowbrick.cpp
 moc_mainwindowbrick.cpp: mainwindowbrick.h \
 		themebrick.h \
 		interlinkbrick.h \
 		moc_predefs.h \
 		/usr/lib/qt5/bin/moc
-	/usr/lib/qt5/bin/moc $(DEFINES) --include /home/ares/QxCentre/QxCentre/moc_predefs.h -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++ -I/home/ares/QxCentre/QxCentre -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtMultimedia -I/usr/include/x86_64-linux-gnu/qt5/QtGui -I/usr/include/x86_64-linux-gnu/qt5/QtNetwork -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I/usr/include/c++/13 -I/usr/include/x86_64-linux-gnu/c++/13 -I/usr/include/c++/13/backward -I/usr/lib/gcc/x86_64-linux-gnu/13/include -I/usr/local/include -I/usr/include/x86_64-linux-gnu -I/usr/include mainwindowbrick.h -o moc_mainwindowbrick.cpp
+	/usr/lib/qt5/bin/moc $(DEFINES) --include /home/ares/QxCentre/QxCentre/moc_predefs.h -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++ -I/home/ares/QxCentre/QxCentre -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtGui -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I/usr/include/c++/13 -I/usr/include/x86_64-linux-gnu/c++/13 -I/usr/include/c++/13/backward -I/usr/lib/gcc/x86_64-linux-gnu/13/include -I/usr/local/include -I/usr/include/x86_64-linux-gnu -I/usr/include mainwindowbrick.h -o moc_mainwindowbrick.cpp
 
 moc_themebrick.cpp: themebrick.h \
 		moc_predefs.h \
 		/usr/lib/qt5/bin/moc
-	/usr/lib/qt5/bin/moc $(DEFINES) --include /home/ares/QxCentre/QxCentre/moc_predefs.h -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++ -I/home/ares/QxCentre/QxCentre -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtMultimedia -I/usr/include/x86_64-linux-gnu/qt5/QtGui -I/usr/include/x86_64-linux-gnu/qt5/QtNetwork -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I/usr/include/c++/13 -I/usr/include/x86_64-linux-gnu/c++/13 -I/usr/include/c++/13/backward -I/usr/lib/gcc/x86_64-linux-gnu/13/include -I/usr/local/include -I/usr/include/x86_64-linux-gnu -I/usr/include themebrick.h -o moc_themebrick.cpp
+	/usr/lib/qt5/bin/moc $(DEFINES) --include /home/ares/QxCentre/QxCentre/moc_predefs.h -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++ -I/home/ares/QxCentre/QxCentre -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtGui -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I/usr/include/c++/13 -I/usr/include/x86_64-linux-gnu/c++/13 -I/usr/include/c++/13/backward -I/usr/lib/gcc/x86_64-linux-gnu/13/include -I/usr/local/include -I/usr/include/x86_64-linux-gnu -I/usr/include themebrick.h -o moc_themebrick.cpp
 
 moc_interlinkbrick.cpp: interlinkbrick.h \
 		moc_predefs.h \
 		/usr/lib/qt5/bin/moc
-	/usr/lib/qt5/bin/moc $(DEFINES) --include /home/ares/QxCentre/QxCentre/moc_predefs.h -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++ -I/home/ares/QxCentre/QxCentre -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtMultimedia -I/usr/include/x86_64-linux-gnu/qt5/QtGui -I/usr/include/x86_64-linux-gnu/qt5/QtNetwork -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I/usr/include/c++/13 -I/usr/include/x86_64-linux-gnu/c++/13 -I/usr/include/c++/13/backward -I/usr/lib/gcc/x86_64-linux-gnu/13/include -I/usr/local/include -I/usr/include/x86_64-linux-gnu -I/usr/include interlinkbrick.h -o moc_interlinkbrick.cpp
+	/usr/lib/qt5/bin/moc $(DEFINES) --include /home/ares/QxCentre/QxCentre/moc_predefs.h -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++ -I/home/ares/QxCentre/QxCentre -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtGui -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I/usr/include/c++/13 -I/usr/include/x86_64-linux-gnu/c++/13 -I/usr/include/c++/13/backward -I/usr/lib/gcc/x86_64-linux-gnu/13/include -I/usr/local/include -I/usr/include/x86_64-linux-gnu -I/usr/include interlinkbrick.h -o moc_interlinkbrick.cpp
 
-moc_qxmusicplayerwindow.cpp: ../QxAudio/QxAudioPlayer/qxmusicplayerwindow.h \
+moc_windowbrick.cpp: windowbrick.h \
 		themebrick.h \
 		interlinkbrick.h \
 		moc_predefs.h \
 		/usr/lib/qt5/bin/moc
-	/usr/lib/qt5/bin/moc $(DEFINES) --include /home/ares/QxCentre/QxCentre/moc_predefs.h -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++ -I/home/ares/QxCentre/QxCentre -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtMultimedia -I/usr/include/x86_64-linux-gnu/qt5/QtGui -I/usr/include/x86_64-linux-gnu/qt5/QtNetwork -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I/usr/include/c++/13 -I/usr/include/x86_64-linux-gnu/c++/13 -I/usr/include/c++/13/backward -I/usr/lib/gcc/x86_64-linux-gnu/13/include -I/usr/local/include -I/usr/include/x86_64-linux-gnu -I/usr/include ../QxAudio/QxAudioPlayer/qxmusicplayerwindow.h -o moc_qxmusicplayerwindow.cpp
-
-moc_qxwritewindowbrick.cpp: ../QxDocument/QxWrite/qxwritewindowbrick.h \
-		themebrick.h \
-		interlinkbrick.h \
-		moc_predefs.h \
-		/usr/lib/qt5/bin/moc
-	/usr/lib/qt5/bin/moc $(DEFINES) --include /home/ares/QxCentre/QxCentre/moc_predefs.h -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++ -I/home/ares/QxCentre/QxCentre -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtMultimedia -I/usr/include/x86_64-linux-gnu/qt5/QtGui -I/usr/include/x86_64-linux-gnu/qt5/QtNetwork -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I/usr/include/c++/13 -I/usr/include/x86_64-linux-gnu/c++/13 -I/usr/include/c++/13/backward -I/usr/lib/gcc/x86_64-linux-gnu/13/include -I/usr/local/include -I/usr/include/x86_64-linux-gnu -I/usr/include ../QxDocument/QxWrite/qxwritewindowbrick.h -o moc_qxwritewindowbrick.cpp
-
-moc_qxsheetwindowbrick.cpp: ../QxDocument/QxSheet/qxsheetwindowbrick.h \
-		themebrick.h \
-		interlinkbrick.h \
-		moc_predefs.h \
-		/usr/lib/qt5/bin/moc
-	/usr/lib/qt5/bin/moc $(DEFINES) --include /home/ares/QxCentre/QxCentre/moc_predefs.h -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++ -I/home/ares/QxCentre/QxCentre -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtMultimedia -I/usr/include/x86_64-linux-gnu/qt5/QtGui -I/usr/include/x86_64-linux-gnu/qt5/QtNetwork -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I/usr/include/c++/13 -I/usr/include/x86_64-linux-gnu/c++/13 -I/usr/include/c++/13/backward -I/usr/lib/gcc/x86_64-linux-gnu/13/include -I/usr/local/include -I/usr/include/x86_64-linux-gnu -I/usr/include ../QxDocument/QxSheet/qxsheetwindowbrick.h -o moc_qxsheetwindowbrick.cpp
+	/usr/lib/qt5/bin/moc $(DEFINES) --include /home/ares/QxCentre/QxCentre/moc_predefs.h -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++ -I/home/ares/QxCentre/QxCentre -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtGui -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I/usr/include/c++/13 -I/usr/include/x86_64-linux-gnu/c++/13 -I/usr/include/c++/13/backward -I/usr/lib/gcc/x86_64-linux-gnu/13/include -I/usr/local/include -I/usr/include/x86_64-linux-gnu -I/usr/include windowbrick.h -o moc_windowbrick.cpp
 
 compiler_moc_objc_header_make_all:
 compiler_moc_objc_header_clean:
@@ -454,35 +428,22 @@ main.o: main.cpp mainwindowbrick.h \
 
 mainwindowbrick.o: mainwindowbrick.cpp mainwindowbrick.h \
 		themebrick.h \
-		interlinkbrick.h \
-		../QxAudio/QxAudioPlayer/qxmusicplayerwindow.h \
-		../QxDocument/QxWrite/qxwritewindowbrick.h \
-		../QxDocument/QxSheet/qxsheetwindowbrick.h
+		interlinkbrick.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o mainwindowbrick.o mainwindowbrick.cpp
 
 themebrick.o: themebrick.cpp themebrick.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o themebrick.o themebrick.cpp
 
-interlinkbrick.o: interlinkbrick.cpp interlinkbrick.h
+interlinkbrick.o: interlinkbrick.cpp interlinkbrick.h \
+		mainwindowbrick.h \
+		themebrick.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o interlinkbrick.o interlinkbrick.cpp
 
-qxmusicplayerwindow.o: ../QxAudio/QxAudioPlayer/qxmusicplayerwindow.cpp ../QxAudio/QxAudioPlayer/qxmusicplayerwindow.h \
+windowbrick.o: windowbrick.cpp windowbrick.h \
 		themebrick.h \
 		interlinkbrick.h \
 		mainwindowbrick.h
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o qxmusicplayerwindow.o ../QxAudio/QxAudioPlayer/qxmusicplayerwindow.cpp
-
-qxwritewindowbrick.o: ../QxDocument/QxWrite/qxwritewindowbrick.cpp ../QxDocument/QxWrite/qxwritewindowbrick.h \
-		themebrick.h \
-		interlinkbrick.h \
-		mainwindowbrick.h
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o qxwritewindowbrick.o ../QxDocument/QxWrite/qxwritewindowbrick.cpp
-
-qxsheetwindowbrick.o: ../QxDocument/QxSheet/qxsheetwindowbrick.cpp ../QxDocument/QxSheet/qxsheetwindowbrick.h \
-		themebrick.h \
-		interlinkbrick.h \
-		mainwindowbrick.h
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o qxsheetwindowbrick.o ../QxDocument/QxSheet/qxsheetwindowbrick.cpp
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o windowbrick.o windowbrick.cpp
 
 moc_mainwindowbrick.o: moc_mainwindowbrick.cpp 
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_mainwindowbrick.o moc_mainwindowbrick.cpp
@@ -493,14 +454,8 @@ moc_themebrick.o: moc_themebrick.cpp
 moc_interlinkbrick.o: moc_interlinkbrick.cpp 
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_interlinkbrick.o moc_interlinkbrick.cpp
 
-moc_qxmusicplayerwindow.o: moc_qxmusicplayerwindow.cpp 
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_qxmusicplayerwindow.o moc_qxmusicplayerwindow.cpp
-
-moc_qxwritewindowbrick.o: moc_qxwritewindowbrick.cpp 
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_qxwritewindowbrick.o moc_qxwritewindowbrick.cpp
-
-moc_qxsheetwindowbrick.o: moc_qxsheetwindowbrick.cpp 
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_qxsheetwindowbrick.o moc_qxsheetwindowbrick.cpp
+moc_windowbrick.o: moc_windowbrick.cpp 
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_windowbrick.o moc_windowbrick.cpp
 
 ####### Install
 
